Best-practices round 3 (Java): README truth, resource/timeout/volatile fixes, real waitSnapshot in tests, fail-closed assertion